# learn-python-playground

./: .gitignore  README.md  package-lock.json  package.json  run-webscrape-in-shell-cmd.ts  test-read-csv-json-file-1.ts  test-read-csv-json-file-2.ts  test-read-json-file-1.ts  test-run-shell-cmd.ts  test-ts-json-string-to-json.ts
test-sql/: scd_type2.db  (+2 more)
webscrape-toy-figure-website/: (origina,detail,缺貨)shop_product_code=N2623282001001_20220706.html  (original,detail,full)shop_product_code=N2623282001001_20220706.html  (original,detail,送出訂單)shop_product_code=N2623282001001_20220705.html  (original,list)p-search__items row.html  (original,list)whole-html.html  README.md  example.db  main.py  prestart.sh  pyproject.toml  requirements.txt
webscrape-toy-figure-website/alembic/versions/: 0c2073730bfb_added_initial_table.py  197960e0ec7d_added_initial_table.py  9311efdaedb5_added_initial_table.py
webscrape-toy-figure-website/app/: deps.py  initial_data.py  logger.py  main.py  main_webscrapping.py  test-scrapeProductDetail-allPage.py  test-scrapeProductDetail-onePage.py
webscrape-toy-figure-website/app/db/: base.py  session.py
webscrape-toy-figure-website/app/models/: __init__.py  products.py
webscrape-toy-figure-website/app/scrape/: helper.py  helperDatabse.py  scrapeProductDetail.py  scrapeProductList.py
webscrape-toy-figure-website/product_detail/: product_detail.json
webscrape-toy-figure-website/product_detail/csv/shop=05-001/dt=20220707/: shop=05-001_20220707.csv
webscrape-toy-figure-website/product_detail/csv/shop=test/dt=20220816/: shop=test_20220816.csv
(+30 files in other folders)
